# FindUrVoicesPJSK

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: _client.py
scripts/: manifest_for_gpt_sovits.py
